# packaging_accel

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/packaging_accel/: __init__.py  _core.pyi
tests/: test_benchmark_cmp_version.py  test_benchmark_parse_version.py  test_benchmark_split_version.py  test_cmp_version.py  test_parse_version.py  test_split_version.py
