[project]
name = "packaging-accel"
version = "0.1.0"
description = "Fast versions of packaging utilities implemented in Rust"
readme = "README.md"
authors = [
    { name = "Henry Schreiner", email = "henryfs@princeton.edu" }
]
requires-python = ">=3.9"
dependencies = []

[tool.maturin]
module-name = "packaging_accel._core"
python-packages = ["packaging_accel"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "packaging>=26.0",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.2.3",
]
